--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,13 +1,13 @@
 @import "../node_modules/bulma/sass/utilities/initial-variables.sass";
 
 $family-sans-serif: "YuMincho" ,"Yu Mincho","メイリオ",serif;
-$size-1: 5rem;
-$size-2: 5rem;
-$size-3: 5rem;
-$size-4: 5rem;
+$size-1: 3rem;
+$size-2: 3rem;
+$size-3: 3rem;
+$size-4: 3rem;
 $size-5: 3rem;
 
-$primary: #FAB81E;
+$primary: #FF8000;
 
 
 $link-hover: hsl(27, 100%, 50%);
@@ -48,3 +48,22 @@ html {
     border-image-repeat: stretch stretch;
 
 }
+
+.subtitle {
+  font-size: 1.5rem;
+}
+
+.title {
+  font-family: "sans-serif";
+  font-weight: lighter;
+}
+
+a { 
+  font-weight: bold;
+}
+
+i { 
+  margin-left: 2px;
+}
+
+
